<!--
   Copyright (C) 2016 Siu-Kei Muk, Snigdha Brahma
   All rights reserved.

   This software may be modified and distributed under the terms
   of the BSD license.  See the LICENSE file for details.
-->

<!--String resources defined-->
<resources>
    <string name="app_name">Calculator</string>
    <string name="cancel_button">C</string>
    <string name="blankets_button">( )</string>
    <string name="pow_button">^</string>
    <string name="div_button">/</string>
    <string name="mult_button">*</string>
    <string name="sub_button">-</string>
    <string name="add_button">+</string>
    <string name="eval_button">=</string>
    <string name="neg_button">+/-</string>
    <string name="dot_button">.</string>
    <string name="num1_button">1</string>
    <string name="num2_button">2</string>
    <string name="num3_button">3</string>
    <string name="num4_button">4</string>
    <string name="num5_button">5</string>
    <string name="num6_button">6</string>
    <string name="num7_button">7</string>
    <string name="num8_button">8</string>
    <string name="num9_button">9</string>
    <string name="num0_button">0</string>
    <string name="history_button">HISTORY</string>
    <string name="recip_button">1/x</string>
    <string name="mod_button">mod</string>
    <string name="sqrt_button">sqrt</string>
    <string name="sin_button">sin</string>
    <string name="cos_button">cos</string>
    <string name="tan_button">tan</string>
    <string name="sinh_button">sinh</string>
    <string name="cosh_button">cosh</string>
    <string name="tanh_button">tanh</string>
    <string name="log_button">log</string>
    <string name="exp_button">exp</string>
    <string name="sig_button">sig</string>
    <string name="abs_button">abs</string>
    <string name="pi_button">PI</string>
    <string name="e_button">e</string>
    <string name="clear_history">Clear History</string>


</resources>
