<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.anu.comp6442.assignment2.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="36.1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:id="@+id/expression_field"
        android:background="@android:color/transparent"
        android:textSize="40sp"
        android:gravity="end"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:gravity="center_vertical">

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/pad_space_right"
            android:layout_alignParentRight="true"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/pad_space_right"
            android:background="@mipmap/ic_backspace_black_36dp"
            android:id="@+id/back_button"
            android:onClick="typeEntry"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11.28">


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/cancel_button"
            android:textSize="36sp"
            android:id="@+id/cancel_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/blankets_button"
            android:textSize="24sp"
            android:id="@+id/blanket_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/pow_button"
            android:textSize="30sp"
            android:id="@+id/pow_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/div_button"
            android:textSize="30sp"
            android:id="@+id/div_button"
            android:onClick="typeEntry"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11.28">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num7_button"
            android:textSize="28sp"
            android:id="@+id/num7_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num8_button"
            android:textSize="28sp"
            android:id="@+id/num8_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num9_button"
            android:textSize="28sp"
            android:id="@+id/num9_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/mult_button"
            android:textSize="30sp"
            android:id="@+id/mult_button"
            android:onClick="typeEntry"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11.28">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num4_button"
            android:textSize="28sp"
            android:id="@+id/num4_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num5_button"
            android:textSize="28sp"
            android:id="@+id/num5_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num6_button"
            android:textSize="28sp"
            android:id="@+id/num6_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/sub_button"
            android:textSize="30sp"
            android:id="@+id/sub_button"
            android:onClick="typeEntry"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11.28">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num1_button"
            android:textSize="28sp"
            android:id="@+id/num1_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num2_button"
            android:textSize="28sp"
            android:id="@+id/num2_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num3_button"
            android:textSize="28sp"
            android:id="@+id/num3_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/add_button"
            android:textSize="30sp"
            android:id="@+id/add_button"
            android:onClick="typeEntry"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11.28">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/dot_button"
            android:textSize="28sp"
            android:id="@+id/dot_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/num0_button"
            android:textSize="28sp"
            android:id="@+id/num0_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/neg_button"
            android:textSize="28sp"
            android:id="@+id/neg_button"
            android:onClick="typeEntry"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/eval_button"
            android:textSize="30sp"
            android:id="@+id/eval_button"
            android:onClick="typeEntry"/>
    </LinearLayout>
</LinearLayout>
